# ml_project_df_mt_cookingqa

./: .gitignore  README.md  pyproject.toml
distilbert_recipeqa_final_model/: config.json  model.safetensors
distilbert_recipeqa_optuna_large_new/: best_params.json
nb_model/: nb_model.joblib  vectorizer.joblib
project_applied_ml_cooking/: _RecipeQA_Naive_Bayes.py  _RecipeQA_Naive_Bayes_adapted.py  _RecipeQA_Naive_Bayes_adaptedforserver.py  _RecipeQA_Roberta_Training_Final_Model.py  _RecipeQA_Roberta_finetuning.py  _RecipeQA_dataset_new_lines_true.py  _RecipeQA_distilbert_Vfinal.py  _RecipeQA_distilbert_new_V2.py
project_applied_ml_cooking_codefiles/: _RecipeQA_Naive_Bayes_adapted.py  _RecipeQA_Roberta_finetuning.py
roberta_model_optuna_best_params/: best_params.json
roberta_recipeqa_final_best_model/: config.json  model.safetensors  tokenizer.json
